intTests/test_saw_import/testFail2.log.good
Loading file "testFail2.saw"
testFail2.saw:1:20-1:21: Error: Syntax error: missing name
FAILED
