intTests/test_saw_import/testFail2.saw
import "A.cry" (x1,,x2);
